<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.plu.drone_controller.droneapp.DroneMainActivity">

    <VideoView
        android:layout_width="500dp"
        android:layout_height="250dp"
        android:id="@+id/videoField"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:text="@string/forward"
        android:id="@+id/forwardButton"
        android:layout_above="@+id/acwButton"
        android:layout_toEndOf="@+id/leftButton" />

    <Button
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:text="@string/back"
        android:id="@+id/backButton"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/leftButton" />

    <Button
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:text="@string/right"
        android:id="@+id/rightButton"
        android:layout_above="@+id/backButton"
        android:layout_toEndOf="@+id/backButton" />

    <Button
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:text="@string/left"
        android:id="@+id/leftButton"
        android:layout_below="@+id/forwardButton"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:text="@string/cw"
        android:id="@+id/cwButton"
        android:layout_above="@+id/backButton"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:text="@string/down"
        android:id="@+id/downButton"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/cwButton" />

    <Button
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:text="@string/acw"
        android:id="@+id/acwButton"
        android:layout_above="@+id/downButton"
        android:layout_toStartOf="@+id/downButton" />

    <Button
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:text="@string/up"
        android:id="@+id/upButton"
        android:layout_above="@+id/cwButton"
        android:layout_toStartOf="@+id/cwButton" />

    <Button
        android:layout_width="265dp"
        android:layout_height="50dp"
        android:text="@string/on"
        android:id="@+id/onButton"
        android:layout_below="@+id/upButton"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/abc_action_bar_content_inset_material"
        android:background="#7af83b" />

    <Button
        android:layout_width="265dp"
        android:layout_height="50dp"
        android:text="@string/land"
        android:id="@+id/landButton"
        android:layout_above="@+id/offButton"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/abc_action_bar_content_inset_material"
        android:background="#f9e659" />

    <Button
        android:layout_width="265dp"
        android:layout_height="50dp"
        android:text="@string/off"
        android:id="@+id/offButton"
        android:layout_alignBottom="@+id/downButton"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/abc_action_bar_content_inset_material"
        android:background="#f91616" />
</RelativeLayout>
